test/good/16-break-continue.mac



int main() {
    int x = 0;
    // will print 1 and not 0 below if break doesnt work
    while(x >= 0) {
        break;
        x = x+1;
    }
    print << x << "\n";
    //infinite loop if continue ignored
    while(x != 1) {
        x = x+1;
        if(x == 1)
            continue;
        x = x+1;
    }
    print << x << "\n";
    return 0;
}