test/bad/brk-invalid-pos.mac



int main() {
    if(false) {
        break;
        return -1;
    }
    return 0;
}